--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
      <div class="row">
       <div class="text-center">
-       <h1 class="londrina-sketch-regular text-light"><strong>Recommended</strong></h1>
+       <h1 class="londrina-sketch-regular text-light"><strong>BL Novel Recommended</strong></h1>
      </div>
      </div>
 
@@ -89,7 +89,7 @@
         <!-- รูปใน1 -->
          <div class="carousel-item active">
           <div class="text-center">
-            <img src="Images/Porra1.jpeg" class="img-fluid frame" alt="..." height="100" width="230">
+            <img src="Images/Porra1.jpeg" class="img-fluid frame" alt="..." height="200" width="330">
           </div>
          </div>
         <!-- จบรูปใน1 -->
@@ -97,7 +97,7 @@
         <!-- รูปใน2 -->
          <div class="carousel-item">
           <div class="text-center">
-            <img src="Images/PorraSP.jpeg" class="img-fluid frame" alt="..." height="100" width="230">
+            <img src="Images/PorraSP.jpeg" class="img-fluid frame" alt="..." height="200" width="330">
           </div>
          </div>
         <!-- จบรูปใน2 -->
@@ -105,7 +105,7 @@
         <!-- รูปใน3 -->
          <div class="carousel-item">
           <div class="text-center">
-           <img src="Images/Sawan1.jpeg" class="img-fluid frame" alt="..." height="100" width="230">
+           <img src="Images/Sawan1.jpeg" class="img-fluid frame" alt="..." height="200" width="330">
           </div>
          </div>
         <!-- จบรูปใน3 -->
@@ -113,7 +113,7 @@
         <!-- รูปใน4 -->
         <div class="carousel-item">
           <div class="text-center">
-           <img src="Images/Sawan2.jpg" class="img-fluid frame" alt="..." height="100" width="230">
+           <img src="Images/Sawan2.jpg" class="img-fluid frame" alt="..." height="200" width="330">
           </div>
         </div>
         <!-- จบรูปใน4 -->        
@@ -121,7 +121,7 @@
         <!-- รูปใน5 -->
         <div class="carousel-item">
           <div class="text-center">
-           <img src="Images/Svsss1.jpg" class="img-fluid frame" alt="..." height="70" width="250">
+           <img src="Images/Svsss1.jpg" class="img-fluid frame" alt="..." height="160" width="350">
           </div>
         </div>
         <!-- จบรูปใน5 -->
@@ -141,11 +141,34 @@
       <!-- content -->
         <div class="row">
          <div class="col-md-12">
-           <p class="text-center text-light"><strong>รีวิวเนื้อหาเด่นภายในเล่ม</strong></p>
-           <p class="text-center text-light"><strong>"ปรมาจารย์ลัทธิมาร"</strong> ไม่เพียงแต่เป็นนิยายที่สนุกสนาน แต่ยังเป็นการเดินทางที่เต็มไปด้วยอารมณ์และความคิดที่ลึกซึ้ง เหมาะสำหรับผู้ที่ชื่นชอบแนวแฟนตาซีและนิยายที่มีการพัฒนาตัวละครที่น่าสนใจ!</p>
+           <p class="text-center text-light"><strong>รีวิวเนื้อหา</strong></p>
+           <p class="text-center text-light">ไม่เพียงแต่เป็นนิยายที่สนุกสนาน แต่ยังเป็นการเดินทางที่เต็มไปด้วยอารมณ์และความคิดที่ลึกซึ้ง เหมาะสำหรับผู้ที่ชื่นชอบแนวแฟนตาซีและนิยายที่มีการพัฒนาตัวละครที่น่าสนใจ!</p>
          </div>
         </div>
 
+        <br>
+
+        <div class="row text-center">
+        <div class="col-md-6">
+          <img src="Images/Porra1.jpeg" alt="" class="img-fluid framed" width="150" height="160">
+          <p class="text-light text-center">ปรมาจารย์ลัทธิมาร เล่ม 1</p>
+        </div>
+
+        <div class="col-md-6">
+          <img src="Images/PorraSP.jpeg" alt="" class="img-fluid framed" width="150" height="160">
+          <p class="text-light text-center">ปรมาจารย์ลัทธิมาร เล่มพิเศษ</p>
+        </div>
+
+        <div class="col-md-6">
+          <img src="Images/Svsss1.jpg" alt="" class="img-fluid framed" width="150" height="160">
+          <p class="text-light text-center">ตัวร้ายอย่างข้าจะหนีเอาตัวรอดอย่างไรดี เล่ม 1</p>
+        </div>
+
+        <div class="col-md-6">
+          <img src="Images/Sawan1.jpeg" alt="" class="img-fluid framed" width="150" height="160">
+          <p class="text-light text-center">สวรรค์ประทานพร เล่ม 1</p>
+        </div>
+        </div>
 
         <br>
         <div class="row">
@@ -155,12 +178,31 @@
             <h5 class="text-light"><strong>สามารถอุดหนุน Series : Mo Xiang Tong Xiu ได้ที่</strong><a href="https://www.naiin.com/writer/044619">
               <br><br>
                 <button type="button" class="btn btn-outline-primary">ร้านนายอินทร์ Naiin</button></a></h5>
-                <br>
-                <iframe width="500" height="800" src="https://www.naiin.com/writer/044619"></iframe>
-
+                <br> 
             </div>
           </div>
         </div>
+
+       <!-- contact col bottom -->
+          <div class="container">
+           <div class="row">
+            <div class="col-md-3">
+              <img src="Images/Roses.jpg" alt="" class="" width="200" height="100">
+            </div>
+
+            <div class="col-md-3">
+              <img src="Images/Roses.jpg" alt="" class="" width="200" height="100">
+            </div>
+
+            <div class="col-md-3">
+              <img src="Images/Roses.jpg" alt="" class="" width="200" height="100">
+            </div>
+
+            <div class="col-md-3">
+              <img src="Images/Roses.jpg" alt="" class="" width="200" height="100">
+            </div>
+           </div>
+          </div>
 
 
 
